@@ -1,5 +1,6 @@
 0.0.10
  - ref: increment DCNUM_PPID_GENERATION for the sake of clarity
+ - ref: unify dealing with num_workers and debugging
 0.0.9
  - fix: properly propagate event extraction keyword arguments
  - fix: QueueCollectorThread used uint16 for enumerating indices
